$Id: ChangeLog,v 1.79 2004/09/11 15:08:55 h_oudejans Exp $

2004-09-24 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Fixed some sizers in the video and misc pages
	* Added rensha turbo support
	* Added Load/Save/Save As OpenMSX settings.

2004-09-11 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Changed the Misc Controls page layout
	* Several cosmetic fixes
	* Removed the Throttle button. Same functionality is now in the
	   'Max speed' button.

2004-08-29 Manuel Bilderbeek <manuel@msxnet.org>
	* Implemented minframeskip and maxframeskip completely.

2004-08-26 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Added pause status in statusbar.
	* Fixed width of machine/extension lists.
	* Statusbar is now restore after closing a menu.

2004-06-06 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Removed all openMSX 0.3.4 support
	* Prepared GUI for minframeskip setting support.

2004-05-29 Manuel Bilderbeek <manuel@msxnet.org>
	* Added support for muting individual channels via channel mode

2004-05-28 Maarten ter Huurne <maarten@treewalker.org>
	* Released openmsx-catapult-0.4.0-R1.

2004-05-28 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Windows executable is now created in derived/bin, which is 
	   better for package creation.
	* Windows build defaults now to the Release version.
	* Disabled the m_commands assert. When no commands are
	   available, the GetPendingCommand function will return an empty
	   string. Effectively, this means that the reception of a reply without
	   a sent command will simply be ignored.

2004-05-09 Maarten ter Huurne <maarten@treewalker.org>
	* Ported system probe from openMSX to Catapult.

2004-05-09 Herman Oudejans <hn.oudejans@quicknet.nl>
	* made the windows build system work with the version info
	* updated the README to point out the manuals	

2004-05-08 Maarten ter Huurne <maarten@treewalker.org>
	* Ported build system stuff from openMSX to Catapult.
	  Includes handling of version info.
	* Implemented "make dist".
